# Advent_of_Code_2022

./: .clang-format  .clang-tidy  .gitignore  00_test.cpp  01_calorie_counting_1.cpp  01_calorie_counting_2.cpp  02_rock_paper_scissors_1.cpp  02_rock_paper_scissors_2.cpp  03_rucksack_reorganization.cpp  03_rucksack_reorganization_2.cpp  04_camp_cleanup_1.cpp  04_camp_cleanup_2.cpp  05_supply_stacks_1.cpp  05_supply_stacks_2.cpp  06_tuning_trouble_1.cpp  06_tuning_trouble_2.cpp  07_no_space_left_1.cpp  07_no_space_left_2.cpp  08_treetop_1.cpp  08_treetop_2.cpp  09_rope_bridge_1.cpp  09_rope_bridge_2.cpp  10_cathode_ray_tube_1.cpp  10_cathode_ray_tube_2.cpp  11_monkey_in_the_middle_1.cpp  11_monkey_in_the_middle_2.cpp  12_hill_climbing_1.cpp  12_hill_climbing_2.cpp  13_distress_signal_1.cpp  13_distress_signal_2.cpp  14_regolith_reservoir_1.cpp  14_regolith_reservoir_2.cpp  15_beacon_exclusion_zone_1.cpp  15_beacon_exclusion_zone_2.cpp  16_proboscidea_volcanium_1.cpp  16_proboscidea_volcanium_2.cpp  17_pyroclastic_flow_1.cpp  CMakeLists.txt  README.md  monkey_parser.cpp  (+1 more)
puzzle_input/: 01.h  02.h  03.h  04.h  05.h  06.h  07.h  08.h  09.h  10.h  11.h  12.h  13.h  14.h  15.h  16.h  17.h
